# University_Projects

./: .gitignore  README.md
AKSO/lab1/: cw5_2a.sh  cw5_2b1.sh  cw5_2b2.sh  cw5_2c.sh  cw7_4.sh  cw7_5.sh  cw7_6.sh  dane.txt  script2.sh  script3.sh
AKSO/lab11/: exec.c  fork.c  makefile  wait.c
AKSO/lab2/: 4.in  gen.sh  isSorted.sh  run.sh  sort  sort.c
AKSO/lab3/: bst.c
AKSO/lab5/: gdb_in.txt  gdb_out.txt  hello.c  sito.c
AKSO/lab6/: div_mul_3.c  makefile
AKSO/lab7/: makefile
AKSO/lab8/: counter.asm  counter_test  hello.asm
AKSO/zad1/: Makefile  README.md  example  ma.c  ma_example_przykladowe.c  run_tests.sh  test.c  testowanie.c
AKSO/zad1poprawa/: CMakeLists.txt  Makefile  Makefile.tests  ma.c  ma.h  ma_tests.c  ma_wyslane.c
AKSO/zad2/: README.md  dziala_bez_T.c  dziala_bez_T_fun.c  dziala_z_T_fun.c  makefile  nsqrt.asm  nsqrt.c  nsqrt_2491.asm  nsqrt_example.c  nsqrt_example.cpp  nsqrt_example_64  nsqrt_macro.asm  test.asm  test.c  testerka  testerka.cpp
AKSO/zad3/: README.md  freverse.asm  mapcalegopliku  plik  test.sh  test_pomiar.sh
PO/javaSpeedTest/: catalan.cpp
PO/lab1/: dfs_pseudo.txt  konstruktory.txt  pojazdy.dia  stos_i_graf.dia
PO/lab2/: .Hello.java.swp  (+1 more)
lab1/: brut.c  in0  makefile  run.sh
lab2/: a.c  gra  gra.c  gra.h  ocen.c
lab3/: Makefile  a  ary  gen.cpp  my_peer_review.txt  ocen  ocen.c  peer_review.txt  run.sh  testowanie.c  zbior_ary.c  zbior_ary.h
lab4/: .gitignore  Makefile  a  a.c  brut  gen  gen.cpp  in  in1  out1  out2  res  run.sh
redblacktree/: completeRBtree.c  main  main.c  rb_tree.c  rb_tree.h
(+380 files in other folders)
